# coolrouter

./: .gitignore  README.md  fulfill.js  invoke.js  listen.js  package-lock.json  package.json  test.js  visualization.html
coolrouter/: Anchor.toml  Cargo.toml  package-lock.json  package.json
coolrouter/coolroutercpi/: Cargo.toml  README.md
coolrouter/coolroutercpi/src/: lib.rs
coolrouter/programs/coolrouter/: Cargo.toml
coolrouter/programs/coolrouter/src/: lib.rs
coolrouter/programs/llm_consumer/: Cargo.toml
coolrouter/programs/llm_consumer/src/: lib.rs
coolrouter/tests/: coolrouter.ts
website/: package.json
website/pages/: _document.tsx  index.jsx
website/styles/: globals.css
